--- a/HomePage/css/Style.css
+++ b/HomePage/css/Style.css
@@ -584,7 +584,7 @@ a {
 
     /* --------------- section Transmission Service ------------ */
     main .Services{ 
-      background: url('../images/Abract01.png');
+      background: url(../images/Abract01.png);
       background-repeat: no-repeat;
       background-position: right;
       height: 100vh;
